[gd_scene load_steps=2 format=2]

[ext_resource path="res://godot/scenes/interface/menu/servermenu.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelJoin" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 152.0
margin_right = -320.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 75.0
margin_bottom = 22.0
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelJoin"]
margin_left = 8.0
margin_top = 40.0
margin_right = 48.0
margin_bottom = 54.0
text = "IP:"

[node name="txtIP" type="LineEdit" parent="PanelJoin"]
margin_left = 8.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 80.0
text = "q1.dlahost.net"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 128.0
margin_top = 40.0
margin_right = 168.0
margin_bottom = 54.0
text = "Port:"

[node name="txtPort" type="LineEdit" parent="PanelJoin"]
margin_left = 128.0
margin_top = 56.0
margin_right = 192.0
margin_bottom = 80.0
text = "4464"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 192.0
margin_top = 96.0
margin_right = 248.0
margin_bottom = 116.0
text = "Join"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 80.0
margin_right = -320.0
margin_bottom = -216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 93.0
margin_bottom = 22.0
text = "Name"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 8.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 168.0
margin_top = 8.0
margin_right = 201.0
margin_bottom = 39.0
text = "Color
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 168.0
margin_top = 24.0
margin_right = 328.0
margin_bottom = 72.0
rect_scale = Vector2( 0.5, 0.5 )
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
